--- a/codebase/default_launch.json
+++ b/codebase/default_launch.json
@@ -6,17 +6,32 @@
       "snapshotWritePeriodSeconds": 0
     },
     "dimensions": {
-      "xMeters": 1500,
-      "zMeters": 1500
+      "xMeters": 2000,
+      "zMeters": 2000
     }
   },
   "workers": [
     {
       "worker_type": "UnityWorker",
       "load_balancing": {
-        "auto_hex_grid": {
-          "num_workers": 4
-         }
+        "dynamic_loadbalancer": {
+          "worker_scaler_config": {
+            "entity_count_config": {
+              "entities_per_worker": 300
+            }
+          },
+          "worker_placer_config": {
+            "auto_hex_grid_params": {
+              "num_workers": 10
+            }
+          },
+          "loadbalancer_config": {
+            "min_range_meters": 500.0,
+            "max_range_meters": 2000.0,
+            "speed_meters_per_second": 100.0,
+            "expansion_time_millis": 60000
+          }
+        }
       },
       "permissions": [{
         "entity_creation": {
