--- a/codebase/london_large_cloud_launch.json
+++ b/codebase/london_large_cloud_launch.json
@@ -5,6 +5,16 @@
     "snapshots": {
       "snapshotWritePeriodSeconds": 0
     },
+    "legacy_flags": [
+      {
+        "name": "bridge_qos_max_timeout",
+        "value": "60000"
+      },
+      {
+        "name": "qos_max_unacked_pings_rate",
+        "value": "2.0d"
+      }
+    ],
     "dimensions": {
       "xMeters": 32000,
       "zMeters": 14500
